--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0"
   }
 }
