--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
-    "zod": "^3.24.3",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
-    "googleapis": "^148.0.0"
+    "googleapis": "^148.0.0",
+    "zod": "^3.24.3"
   }
 }
